--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -1,49 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href="./style.css" rel="stylesheet" type="text/css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <title>Frontend Mentor | Interactive rating component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <section class="state" id="initial"> 
+    <img src="./images/icon-star.svg" alt="star" id="star">
+    <h1>How did we do?</h1>
 
-  <!-- Rating state start -->
+    <p>Please let us know how we did with your support request. All feedback is appreciated
+    to help us improve our offering!</p>
 
-  How did we do?
+    <ul>
+      <li style="letter-spacing: 3px"> 1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+    </ul>
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+    <button>Submit</button>
 
-  1 2 3 4 5
+  </section>
 
-  Submit
+<section class = "state" id="completed">
+    You selected xx out of 5
 
-  <!-- Rating state end -->
+    Thank you!
 
-  <!-- Thank you state start -->
+    We appreciate you taking the time to give a rating. If you ever need more support,
+    don’t hesitate to get in touch!
+  </section>
 
-  You selected <!-- Add rating here --> out of 5
 
-  Thank you!
 
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Glebster</a>.
   </div>
 </body>
+
 </html>
