--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -21,12 +21,12 @@
     <p>Please let us know how we did with your support request. All feedback is appreciated
       to help us improve our offering!</p>
 
-    <ul>
-      <li style="letter-spacing: 3px"> 1</li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
-      <li>5</li>
+    <ul class="rating">
+      <li id="1" style="letter-spacing: 3px"> 1</li>
+      <li id="2">2</li>
+      <li id="3">3</li>
+      <li id="4">4</li>
+      <li id="5" onclick="getRating">5</li>
     </ul>
 
     <button onclick="getRating">Submit</button>
