--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -22,11 +22,11 @@
       to help us improve our offering!</p>
 
     <ul class="rating">
-      <li id="1" style="letter-spacing: 3px"> 1</li>
-      <li id="2">2</li>
-      <li id="3">3</li>
-      <li id="4">4</li>
-      <li id="5" onclick="getRating">5</li>
+      <li id="1st" style="letter-spacing: 3px"> 1</li>
+      <li id="2nd">2</li>
+      <li id="3rd">3</li>
+      <li id="4th">4</li>
+      <li id="5th">5</li>
     </ul>
 
     <button onclick="getRating">Submit</button>
