--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -29,7 +29,7 @@
       <li id="rate5">5</li>
     </ul>
 
-    <button onclick="getRating">Submit</button>
+    <button>Submit</button>
 
   </section>
 
