finish js code it is in dire need of refactoring

--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -35,7 +35,7 @@
 
   <section class="state" id="completed">
     <img src="./images/illustration-thank-you.svg"  alt="illustration thank you" id="thank-you">
-    <span>You selected xx out of 5</span>
+    <span id="given-rating">You selected xx out of 5</span>
 
     <h1>Thank you!</h1>
 
