update .attribution section

--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -46,8 +46,8 @@
 
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Glebster</a>.
+    Challenge by <a href="https://www.frontendmentor.io/solutions/interactive-rating-component-B10Shz485" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/wglebster">Gleb_V</a>.
   </div>
 
   <script src="./script.js"></script>
